--- a/packages/thriller/package.json
+++ b/packages/thriller/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thriller",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Thriller is a configureless build system for Node.js microservices on top of Rollup",
   "repository": "https://github.com/ezekielchentnik/thriller",
   "author": "@ezekielchentnik",
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "babel-core": "6.24.1",
-    "babel-preset-thriller": "0.0.0",
+    "babel-preset-thriller": "^0.0.1",
     "cross-spawn": "5.1.0",
     "nodemon": "1.11.0",
     "ramda": "0.23.0",
